syntax = "proto3";

package don.evm.v1;

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/capabilities/stubs/don/evm";

import "google/protobuf/empty.proto";
import "crosschain.proto";
import "metadata.proto";

message TxID {
  string value = 1;
}

message ReadMethodRequest {
  string address = 1;
  bytes calldata = 2;
  ConfidenceLevel confidence_level = 3;
}

// Represents a request to query logs
message QueryLogsRequest {
  FilterQuery filter = 1;
  ConfidenceLevel confidence_level = 2;
}

message SubmitTransactionRequest { // TODO: Remove
  string to_address = 1;
  GasConfig gas_config = 2;
  bytes calldata = 3; // Optional
};


message SignedReport {
  bytes report = 1;
  bytes context  = 2;
  repeated bytes signatures = 3;
  bytes id = 4;
}

// Represents a request to submit a transaction
message WriteReportRequest {
  GasConfig gas_config = 1;
  SignedReport report = 2; 
}

message Log {
  string address = 1; // common.Address represented as bytes
  repeated bytes topics = 2; // []common.Hash represented as repeated bytes
  bytes data = 3; // []byte represented as bytes
  uint64 block_number = 4; // uint64
  string tx_hash = 5; // common.Hash represented as string
  uint32 tx_index = 6; // uint represented as uint32
  string block_hash = 7; // common.Hash represented as string
  uint32 index = 8; // uint represented as uint32
  bool removed = 9; // bool
}

message FilterQuery {
  oneof from_block {
    uint64 from_block_number = 1;
    string from_block_tag = 2; // e.g., "latest"
  }

  oneof to_block {
    uint64 to_block_number = 3;
    string to_block_tag = 4; // e.g., "latest"
  }

  repeated string address = 5;

  // Nested topics definition to support string | Array<string> | null
  message Topic {
    repeated string values = 1;
  }

  repeated Topic topics = 6;

  string block_hash = 7;
}

message LogTriggerRequest {
  FilterQuery filterQuery = 1;
}

service Client {
  rpc GetTxResult (TxID) returns (don.crosschain.v1.TxResult);
  rpc ReadMethod (ReadMethodRequest) returns (don.crosschain.v1.ByteArray);
  rpc QueryLogs (QueryLogsRequest) returns (LogList);
  rpc SubmitTransaction (SubmitTransactionRequest) returns (TxID); //TODO remove
  rpc WriteReport (WriteReportRequest) returns (TxID);
  rpc LogTrigger (LogTriggerRequest) returns (Log) {
    option (cre.metadata.callType) = Trigger;
  };
  rpc OnFinalityViolation (google.protobuf.Empty) returns (don.crosschain.v1.BlockRange) {
    option (cre.metadata.callType) = Trigger;
  };
}

// Placeholder messages for types defined elsewhere
message GasConfig {
  // Fill this in based on your domain model
}

message LogList {
  repeated Log logs = 1;
}

enum ConfidenceLevel {
  CONFIDENCE_LEVEL_UNSPECIFIED = 0;
  LOW = 1;
  MEDIUM = 2;
  HIGH = 3;
  FINALITY = 4;
}
